--- a/python-flask/pyproject.toml
+++ b/python-flask/pyproject.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 python = "^3.11"
 flask = "^3.0.3"
 
-[tool.poetry.group.dev.dependencies]
-black = "^23.9.1"
-ruff = "^0.0.290"
+[tool.poetry.dev.dependencies]
+black = "^24.4.2 "
+ruff = "^0.5.1 "
 
 [tool.poetry.scripts]
 app = 'app:main'
